--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -15,6 +15,10 @@ CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_WESTWOOD=y
 # Display
 CONFIG_KLAPSE=y
+# TTL
+CONFIG_NETFILTER_XT_TARGET_HL=y
+CONFIG_NETFILTER_XT_TARGET_HMARK=y
+CONFIG_IP_NF_TARGET_TTL=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
