--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -1,5 +1,9 @@
 CONFIG_LOCALVERSION="-ZyC-Rebuild"
 # CONFIG_LOCALVERSION_AUTO is not set
+# TTL
+CONFIG_NETFILTER_XT_TARGET_HL=y
+CONFIG_NETFILTER_XT_TARGET_HMARK=y
+CONFIG_IP_NF_TARGET_TTL=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
