hex_defconfig: Bump duration of boost
Without this, we risk unboosting momentarily when inverting swipe
orientation (i.e. swipe up to swipe down).

Signed-off-by: Tyler Nijmeh <tylernij@gmail.com>
Signed-off-by: HachimanH20 <msuhartonoh20@gmail.com>
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -6,6 +6,8 @@ CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 # CONFIG_SIMPLE_GPU_ALGORITHM is not set
 # CPU
 CONFIG_DSBOOST=y
+CONFIG_INPUT_BOOST_DURATION=500
+CONFIG_INPUT_STUNE_BOOST=50
 # sound 
 CONFIG_DTS_SRS_TM=y
 CONFIG_AINUR_DTS_HW=y
