--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -4,6 +4,13 @@ CONFIG_LOCALVERSION="-ZyC-Rebuild"
 CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_NETFILTER_XT_TARGET_HMARK=y
 CONFIG_IP_NF_TARGET_TTL=y
+# Devfreq
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=1571
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
+CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
