defconfig: add dts
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -7,6 +7,9 @@ CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=1571
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
+# sound 
+CONFIG_DTS_SRS_TM=y
+CONFIG_AINUR_DTS_SW=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
