defconfig: add sound control
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -10,6 +10,8 @@ CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 # sound 
 CONFIG_DTS_SRS_TM=y
 CONFIG_AINUR_DTS_SW=y
+CONFIG_SND_SOC_SDM660_COMMON=y
+CONFIG_SOUND_CONTROL=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
