--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -12,6 +12,10 @@ CONFIG_DTS_SRS_TM=y
 CONFIG_AINUR_DTS_SW=y
 CONFIG_SND_SOC_SDM660_COMMON=y
 CONFIG_SOUND_CONTROL=y
+# TCP Congestion
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y 
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
