--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -16,6 +16,8 @@ CONFIG_SOUND_CONTROL=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y 
 CONFIG_DEFAULT_WESTWOOD=y
+# Display
+CONFIG_KLAPSE=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
