Defconfig: turn on adreno idler
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -3,7 +3,7 @@ CONFIG_LOCALVERSION="-QuantumKiller-"
 # Devfreq
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
-CONFIG_ADRENO_IDLER=n
+CONFIG_ADRENO_IDLER=y
 # sound 
 CONFIG_DTS_SRS_TM=y
 CONFIG_AINUR_DTS_SW=y
