--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -19,6 +19,9 @@ CONFIG_KLAPSE=y
 CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_NETFILTER_XT_TARGET_HMARK=y
 CONFIG_IP_NF_TARGET_TTL=y
+# ETC
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_STATE_NOTIFIER=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
