--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -3,7 +3,7 @@ CONFIG_LOCALVERSION_AUTO=y
 # Devfreq
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 CONFIG_ADRENO_IDLER=y
-CONFIG_SIMPLE_GPU_ALGORITHM=n
+CONFIG_SIMPLE_GPU_ALGORITHM=y
 # CPU
 CONFIG_DSBOOST=y
 # sound 
@@ -28,6 +28,8 @@ CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+# Simple LMK
+CONFIG_ANDROID_SIMPLE_LMK=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
