defconfig: disable CONFIG_LOCALVERSION_AUTO
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -1,5 +1,5 @@
 CONFIG_LOCALVERSION="-ZyC-Rebuild"
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 # Devfreq
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 # CONFIG_ADRENO_IDLER is not set
