--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -1,9 +1,18 @@
 CONFIG_LOCALVERSION="-ZyC-Rebuild"
-# CONFIG_LOCALVERSION_AUTO is not set
+## -- -- -- -- -- -- -- -- -- -- -- --
+## --
+## --
+## --
+## no configs
+## --
+## --
+## --
+## -- -- -- -- -- -- -- -- -- -- -- --
+CONFIG_LOCALVERSION_AUTO=y
 # Devfreq
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
-# CONFIG_ADRENO_IDLER is not set
-# CONFIG_SIMPLE_GPU_ALGORITHM is not set
+CONFIG_ADRENO_IDLER=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
 # CPU
 CONFIG_DSBOOST=y
 CONFIG_INPUT_BOOST_DURATION=500
@@ -31,7 +40,7 @@ CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_STATE_NOTIFIER is not set
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 # Simple LMK
-CONFIG_ANDROID_SIMPLE_LMK=y
+# CONFIG_ANDROID_SIMPLE_LMK is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
