--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -52,6 +52,8 @@ CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
+CONFIG_ARCH_QCOM=y
+CONFIG_ARCH_SDM660=y
 CONFIG_MACH_ASUS=y
 CONFIG_MACH_ASUS_X01BD=y
 CONFIG_PCI=y
