--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -11,6 +11,8 @@ CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=1571
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
+# Display
+CONFIG_KLAPSE=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -486,6 +488,7 @@ CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 # CONFIG_SND_PCI is not set
