defconfig: optimize kernel for size
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -13,6 +13,8 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 # Display
 CONFIG_KLAPSE=y
+# Etc
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
