--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -15,6 +15,7 @@ CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 CONFIG_KLAPSE=y
 # Etc
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_SOUND_CONTROL=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
