--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-ZyC-Rebuild"
+CONFIG_LOCALVERSION="-QuantumKiller-uL"
 # CONFIG_LOCALVERSION_AUTO is not set
 # TTL
 CONFIG_NETFILTER_XT_TARGET_HL=y
@@ -77,7 +77,7 @@ CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
-CONFIG_HZ=250
+CONFIG_HZ=100
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
