--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,9 @@ Android.bp
 
 # Huaqin, stop being retard by doing all kernel stuffs on Windows
 !.gitattributes
+
+# ignore tc folder
+clang
+gcc64
+gcc32
+Anykernel3
